<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <io.github.xTun.preferences.ProfileEditTextPreference
        android:defaultValue="Default"
        android:key="profileName"
        android:summary="@string/profile_summary"
        android:title="@string/profile"
        android:singleLine="true">
    </io.github.xTun.preferences.ProfileEditTextPreference>

    <PreferenceCategory
        android:title="@string/client_cat">

        <io.github.xTun.preferences.SummaryEditTextPreference
            android:defaultValue="10.0.0.3"
            android:key="localIP"
            android:summary="@string/localIP_summary"
            android:title="@string/localIP"
            android:singleLine="true">
        </io.github.xTun.preferences.SummaryEditTextPreference>

        <io.github.xTun.preferences.SummaryEditTextPreference
            android:inputType="number"
            android:defaultValue="1426"
            android:key="mtu"
            android:summary="@string/mtu_summary"
            android:title="@string/mtu"
            android:singleLine="true">
        </io.github.xTun.preferences.SummaryEditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/server_cat">

        <io.github.xTun.preferences.SummaryEditTextPreference
                android:defaultValue=""
                android:key="server"
                android:summary="@string/server_summary"
                android:title="@string/server"
                android:singleLine="true">
        </io.github.xTun.preferences.SummaryEditTextPreference>

        <io.github.xTun.preferences.SummaryEditTextPreference
                android:inputType="number"
                android:defaultValue="1082"
                android:key="remotePort"
                android:summary="@string/remote_port_summary"
                android:title="@string/remote_port"
                android:singleLine="true">
        </io.github.xTun.preferences.SummaryEditTextPreference>

        <io.github.xTun.preferences.SummaryListPreference
            android:defaultValue="2"
            android:key="protocol"
            android:entries="@array/protocol_entry"
            android:entryValues="@array/protocol_value"
            android:title="@string/protocol_list">
        </io.github.xTun.preferences.SummaryListPreference>

        <io.github.xTun.preferences.PasswordEditTextPreference
                android:inputType="textPassword"
                android:defaultValue=""
                android:key="password"
                android:summary="@string/password_summary"
                android:title="@string/password"
                android:singleLine="true">
        </io.github.xTun.preferences.PasswordEditTextPreference>

        <io.github.xTun.preferences.SummaryEditTextPreference
            android:defaultValue="1.1.1.1"
            android:key="dns"
            android:summary="@string/server_summary"
            android:title="@string/dns"
            android:singleLine="true">
        </io.github.xTun.preferences.SummaryEditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/feature_cat">

        <!--<io.github.xTun.preferences.SummaryListPreference-->
                <!--android:defaultValue="all"-->
                <!--android:key="route"-->
                <!--android:entries="@array/route_entry"-->
                <!--android:entryValues="@array/route_value"-->
                <!--android:summary="@string/route_list_summary"-->
                <!--android:title="@string/route_list">-->
        <!--</io.github.xTun.preferences.SummaryListPreference>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="isGlobalProxy"-->
            <!--android:disableDependentsState="true"-->
            <!--android:summary="@string/auto_set_proxy_summary"-->
            <!--android:title="@string/auto_set_proxy">-->
        <!--</CheckBoxPreference>-->

        <SwitchPreference
            android:key="proxyApps"
            android:summary="@string/proxied_apps_summary"
            android:title="@string/proxied_apps">
            <!--<intent android:action="io.github.xTun.ui.AppManagerActivity"/>-->
        </SwitchPreference>

        <SwitchPreference
                android:key="isAutoConnect"
                android:summary="@string/auto_connect_summary"
                android:title="@string/auto_connect">
        </SwitchPreference>

    </PreferenceCategory>

</PreferenceScreen>
